--- a/2_javascript/css/styles.css
+++ b/2_javascript/css/styles.css
@@ -15,8 +15,35 @@ body {
     font-size: larger;
 }
 
+#padre {
+    background-color: cornflowerblue;
+    padding: 15px;
+}
+
+#miForm {
+    border: 2px solid fuchsia;
+    padding: 10px;
+    width: 200px;
+}
 #padre, form {
     border: 2px solid tomato;
     padding: 10px;
     margin-top: 10px;
 }
+
+
+#contenedorAlbums {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.lista-data {
+    border: 2px solid;
+    padding: 5px;
+    margin: 5px;
+}
+
+.lista-data li {
+    list-style-type: none;
+}
+
